# Quiet-Alarm

./: .easignore  .gitignore  .ioss_build  Makefile  app.json  package-lock.json  package.json  prompts.txt  storeListing.md  termsOfUse.md
assets/: colorPalettes.js
audio-engine/: .gitignore  AudioEngine.podspec  INTEGRATION.md  README.md  package.json  react-native.config.js  tsconfig.json
audio-engine/android/: CMakeLists.txt  build.gradle
audio-engine/android/src/main/java/com/biosyncare/audioengine/: AudioEnginePackage.kt
audio-engine/android/src/main/jni/: OnLoad.cpp
audio-engine/cpp/: AnimationValueRegistry.h  BinauralNode.cpp  BinauralNode.h  BinauralNodeHostObject.h  MartigliBinauralNode.cpp  MartigliBinauralNode.h  MartigliBinauralNodeHostObject.h  MartigliNode.cpp  MartigliNode.h  MartigliNodeHostObject.h  MyOscillatorNode.cpp  MyOscillatorNode.h  MyOscillatorNodeHostObject.h  NativeCustomNodesModule.cpp  NativeCustomNodesModule.h  NoiseNode.cpp  NoiseNode.h  NoiseNodeHostObject.h  SymmetryNode.cpp  SymmetryNode.h  SymmetryNodeHostObject.h
audio-engine/cpp/dsp/shared/: DspPrimitives.cpp  DspPrimitives.h  SessionDspEngine.cpp  SessionDspEngine.h  SharedDspTypes.h
audio-engine/cpp/dsp/tests/: shared_dsp_tests.cpp
audio-engine/cpp/dsp/wasm/: WorkletWasmExports.cpp
audio-engine/ios/: NativeCustomNodesModuleProvider.h  NativeCustomNodesModuleProvider.mm
audio-engine/patches/: react-native-audio-api+0.8.4.patch
audio-engine/scripts/: buildWorkletWasm.js  checkWorkletWasm.js  testSharedDsp.sh
audio-engine/src/: index.ts
audio-engine/src/demo/: BinauralSmokeTestButton.tsx
audio-engine/src/engine/: AudioConfig.js  SessionManager.js  backgroundSessionStopGuard.ts  controlBuses.ts  engineLogger.ts  ensureCustomNodesInstalled.ts  foregroundService.ts  martigliComfortGain.ts  mobileSoundscape.ts  platform.ts  presetPitchSlots.js  sampleAudioBridge.ts  sessionDebugFlag.js  sharedDspConfig.ts  symmetryPermutationProgram.js  types.ts  voiceTypes.ts  webAVS.js  webAudioBufferPlayer.ts  webAudioEngineConfig.ts  webAudioShared.js  webSessionRecorder.ts  webSoundscape.ts
audio-engine/src/engine/workletWasm/: workletWasmProcessorSource.js  workletWasmSession.js
audio-engine/src/specs/: NativeCustomNodesModule.ts  NativeCustomNodesModule.web.ts
audioPresets/: deepSleep.json  fallAsleep.json  lucidDreaming.json  memoryRetention.json  morningActivation.json
docs/: feasibility-and-test-protocol.md
modules/alarm-engine/: expo-module.config.json  index.ts
modules/alarm-engine/android/: build.gradle
modules/alarm-engine/android/src/main/: AndroidManifest.xml
modules/alarm-engine/android/src/main/java/com/richinevan/quietalarm/alarm/: AlarmAudioService.kt  AlarmLog.kt  AlarmReceiver.kt  AlarmSchedulerModule.kt  AlarmScheduling.kt
src/app/: _layout.tsx  alarm-edit.tsx  index.tsx  spike.tsx
src/components/: BSIcon.tsx  BioSynCarePromo.tsx  bsIcons.generated.ts
src/components/alarms/: AlarmRow.tsx  DurationPickerSheet.tsx  PresetCard.tsx  PresetPickerSheet.tsx  TimeWheelPicker.tsx  WeekdayPicker.tsx
src/lib/alarms/: alarmLog.ts  alarmsStore.ts  androidScheduler.ts  iosEngine.ts  nextOccurrence.ts  presets.ts  renderPresetAndroid.ts  storage.ts  timing.ts  types.ts  useAlarms.ts  usePresetPreview.ts  wavEncode.ts
src/theme/: colors.ts
src/types/: expo-av.d.ts
